catalyst/src/main/generate/moonbox/catalyst/core/parser/udf/udfParser/UDFParser.java
// Generated from moonbox/catalyst/core/parser/udf/udfParser/UDF.g4 by ANTLR 4.5.3
package moonbox.catalyst.core.parser.udf.udfParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UDFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, AND=12, OR=13, MINUS=14, TRUE=15, FALSE=16, NULL=17, 
		ARROW=18, LPAREN=19, RPAREN=20, SELECT=21, FROM=22, WHERE=23, BinaryArithmeticOperator=24, 
		BinaryComparator=25, BACKQUOTED_IDENTIFIER=26, STRING=27, BIGINT_LITERAL=28, 
		SMALLINT_LITERAL=29, TINYINT_LITERAL=30, BYTELENGTH_LITERAL=31, DOUBLE_LITERAL=32, 
		BIGDECIMAL_LITERAL=33, INTEGER_VALUE=34, DECIMAL_VALUE=35, IDENTIFIER=36, 
		SIMPLE_COMMENT=37, BRACKETED_EMPTY_COMMENT=38, BRACKETED_COMMENT=39, WS=40, 
		UNRECOGNIZED=41, DELIMITER=42;
	public static final int
		RULE_udf = 0, RULE_statement = 1, RULE_prefix = 2, RULE_whereStatement = 3, 
		RULE_udfunction = 4, RULE_arrayMap = 5, RULE_arrayFilter = 6, RULE_arrayExists = 7, 
		RULE_arrowAndExpression = 8, RULE_variableAndArrow = 9, RULE_expression = 10, 
		RULE_literal = 11, RULE_mapExpression = 12, RULE_term = 13, RULE_term1 = 14, 
		RULE_atom = 15, RULE_numberAndString = 16, RULE_ideantifierOrLiteral = 17, 
		RULE_booleanExpression = 18, RULE_termf = 19, RULE_booleanValue = 20, 
		RULE_identifier = 21, RULE_quotedIdentifier = 22, RULE_number = 23;
	public static final String[] ruleNames = {
		"udf", "statement", "prefix", "whereStatement", "udfunction", "arrayMap", 
		"arrayFilter", "arrayExists", "arrowAndExpression", "variableAndArrow", 
		"expression", "literal", "mapExpression", "term", "term1", "atom", "numberAndString", 
		"ideantifierOrLiteral", "booleanExpression", "termf", "booleanValue", 
		"identifier", "quotedIdentifier", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'array_map('", "'ARRAY_MAP('", "'array_filter('", "'ARRAY_FILTER('", 
		"'array_exists('", "'ARRAY_EXISTS('", "'+'", "'%'", "'*'", "'/'", null, 
		null, "'-'", null, null, "'NULL'", "'=>'", "'('", "')'", null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'/**/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"AND", "OR", "MINUS", "TRUE", "FALSE", "NULL", "ARROW", "LPAREN", "RPAREN", 
		"SELECT", "FROM", "WHERE", "BinaryArithmeticOperator", "BinaryComparator", 
		"BACKQUOTED_IDENTIFIER", "STRING", "BIGINT_LITERAL", "SMALLINT_LITERAL", 
		"TINYINT_LITERAL", "BYTELENGTH_LITERAL", "DOUBLE_LITERAL", "BIGDECIMAL_LITERAL", 
		"INTEGER_VALUE", "DECIMAL_VALUE", "IDENTIFIER", "SIMPLE_COMMENT", "BRACKETED_EMPTY_COMMENT", 
		"BRACKETED_COMMENT", "WS", "UNRECOGNIZED", "DELIMITER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UDF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  /**
	   * Verify whether current token is a valid decimal token (which contains dot).
	   * Returns true if the character that follows the token is not a digit or letter or underscore.
	   *
	   * For example:
	   * For char stream "2.3", "2." is not a valid decimal token, because it is followed by digit '3'.
	   * For char stream "2.3_", "2.3" is not a valid decimal token, because it is followed by '_'.
	   * For char stream "2.3W", "2.3" is not a valid decimal token, because it is followed by 'W'.
	   * For char stream "12.0D 34.E2+0.12 "  12.0D is a valid decimal token because it is folllowed
	   * by a space. 34.E2 is a valid decimal token because it is followed by symbol '+'
	   * which is not a digit or letter or underscore.
	   */
	  public boolean isValidDecimal() {
	    int nextChar = _input.LA(1);
	    if (nextChar >= 'A' && nextChar <= 'Z' || nextChar >= '0' && nextChar <= '9' ||
	      nextChar == '_') {
	      return false;
	    } else {
	      return true;
	    }
	  }

	public UDFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UdfContext extends ParserRuleContext {
		public StatementContext sql;
		public TerminalNode EOF() { return getToken(UDFParser.EOF, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public UdfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_udf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterUdf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitUdf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitUdf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UdfContext udf() throws RecognitionException {
		UdfContext _localctx = new UdfContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_udf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((UdfContext)_localctx).sql = statement();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IdentifierContext table;
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public TerminalNode FROM() { return getToken(UDFParser.FROM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public WhereStatementContext whereStatement() {
			return getRuleContext(WhereStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			prefix();
			setState(52);
			match(FROM);
			setState(53);
			((StatementContext)_localctx).table = identifier();
			setState(55);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(54);
				whereStatement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(UDFParser.SELECT, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<UdfunctionContext> udfunction() {
			return getRuleContexts(UdfunctionContext.class);
		}
		public UdfunctionContext udfunction(int i) {
			return getRuleContext(UdfunctionContext.class,i);
		}
		public PrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixContext prefix() throws RecognitionException {
		PrefixContext _localctx = new PrefixContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prefix);
		int _la;
		try {
			int _alt;
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				match(SELECT);
				setState(60);
				switch (_input.LA(1)) {
				case BACKQUOTED_IDENTIFIER:
				case IDENTIFIER:
					{
					setState(58);
					identifier();
					}
					break;
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
					{
					setState(59);
					udfunction();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(62);
					match(T__0);
					setState(65);
					switch (_input.LA(1)) {
					case BACKQUOTED_IDENTIFIER:
					case IDENTIFIER:
						{
						setState(63);
						identifier();
						}
						break;
					case T__1:
					case T__2:
					case T__3:
					case T__4:
					case T__5:
					case T__6:
						{
						setState(64);
						udfunction();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(SELECT);
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(73);
						matchWildcard();
						}
						} 
					}
					setState(78);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereStatementContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(UDFParser.WHERE, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public WhereStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterWhereStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitWhereStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitWhereStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereStatementContext whereStatement() throws RecognitionException {
		WhereStatementContext _localctx = new WhereStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whereStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(WHERE);
			setState(82);
			booleanExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UdfunctionContext extends ParserRuleContext {
		public ArrayMapContext arrayMap() {
			return getRuleContext(ArrayMapContext.class,0);
		}
		public ArrayFilterContext arrayFilter() {
			return getRuleContext(ArrayFilterContext.class,0);
		}
		public ArrayExistsContext arrayExists() {
			return getRuleContext(ArrayExistsContext.class,0);
		}
		public UdfunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_udfunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterUdfunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitUdfunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitUdfunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UdfunctionContext udfunction() throws RecognitionException {
		UdfunctionContext _localctx = new UdfunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_udfunction);
		try {
			setState(87);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				arrayMap();
				}
				break;
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				arrayFilter();
				}
				break;
			case T__5:
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				arrayExists();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayMapContext extends ParserRuleContext {
		public ArrowAndExpressionContext aAnde;
		public ArrowAndExpressionContext arrowAndExpression() {
			return getRuleContext(ArrowAndExpressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UdfunctionContext udfunction() {
			return getRuleContext(UdfunctionContext.class,0);
		}
		public ArrayMapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayMap; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterArrayMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitArrayMap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitArrayMap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayMapContext arrayMap() throws RecognitionException {
		ArrayMapContext _localctx = new ArrayMapContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayMap);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			{
			setState(92);
			switch (_input.LA(1)) {
			case BACKQUOTED_IDENTIFIER:
			case IDENTIFIER:
				{
				setState(90);
				identifier();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				{
				setState(91);
				udfunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			match(T__0);
			setState(95);
			((ArrayMapContext)_localctx).aAnde = arrowAndExpression();
			}
			setState(97);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayFilterContext extends ParserRuleContext {
		public ArrowAndExpressionContext aAnde;
		public ArrowAndExpressionContext arrowAndExpression() {
			return getRuleContext(ArrowAndExpressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UdfunctionContext udfunction() {
			return getRuleContext(UdfunctionContext.class,0);
		}
		public ArrayFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterArrayFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitArrayFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitArrayFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayFilterContext arrayFilter() throws RecognitionException {
		ArrayFilterContext _localctx = new ArrayFilterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayFilter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			{
			setState(102);
			switch (_input.LA(1)) {
			case BACKQUOTED_IDENTIFIER:
			case IDENTIFIER:
				{
				setState(100);
				identifier();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				{
				setState(101);
				udfunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(104);
			match(T__0);
			setState(105);
			((ArrayFilterContext)_localctx).aAnde = arrowAndExpression();
			}
			setState(107);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayExistsContext extends ParserRuleContext {
		public ArrowAndExpressionContext aAnde;
		public ArrowAndExpressionContext arrowAndExpression() {
			return getRuleContext(ArrowAndExpressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UdfunctionContext udfunction() {
			return getRuleContext(UdfunctionContext.class,0);
		}
		public ArrayExistsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayExists; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterArrayExists(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitArrayExists(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitArrayExists(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayExistsContext arrayExists() throws RecognitionException {
		ArrayExistsContext _localctx = new ArrayExistsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayExists);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			{
			setState(112);
			switch (_input.LA(1)) {
			case BACKQUOTED_IDENTIFIER:
			case IDENTIFIER:
				{
				setState(110);
				identifier();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
				{
				setState(111);
				udfunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(114);
			match(T__0);
			setState(115);
			((ArrayExistsContext)_localctx).aAnde = arrowAndExpression();
			}
			setState(117);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrowAndExpressionContext extends ParserRuleContext {
		public VariableAndArrowContext arrowPrefix;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableAndArrowContext variableAndArrow() {
			return getRuleContext(VariableAndArrowContext.class,0);
		}
		public ArrowAndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrowAndExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterArrowAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitArrowAndExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitArrowAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrowAndExpressionContext arrowAndExpression() throws RecognitionException {
		ArrowAndExpressionContext _localctx = new ArrowAndExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrowAndExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(119);
				((ArrowAndExpressionContext)_localctx).arrowPrefix = variableAndArrow();
				}
				break;
			}
			setState(122);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableAndArrowContext extends ParserRuleContext {
		public Token variable;
		public TerminalNode ARROW() { return getToken(UDFParser.ARROW, 0); }
		public TerminalNode IDENTIFIER() { return getToken(UDFParser.IDENTIFIER, 0); }
		public VariableAndArrowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableAndArrow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).enterVariableAndArrow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UDFListener ) ((UDFListener)listener).exitVariableAndArrow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UDFVisitor ) return ((UDFVisitor<? extends T>)visitor).visitVariableAndArrow(this);
			else return visitor.visitChildren(this);
		}
	}
